# FluentInfo

./: .gitattributes  .gitignore  .gitmodules  FluentInfo.sln  FluentInfo.slnx  Generate-LocalizedStrings.ps1  Generate-TerminalAssets.ps1  LICENSE.txt  PRIVACY-POLICY.md  README.md  Update-MediaInfo.ps1  msStoreListingData.csv
.github/workflows/: dotnet.yml  msbuild.yml
FluentInfo/: AboutContentPage.xaml  AboutContentPage.xaml.cs  App.xaml  App.xaml.cs  AppModel.cs  Converters.cs  FailedPage.xaml  FailedPage.xaml.cs  FluentInfo.csproj  MainWindow.xaml  MainWindow.xaml.cs  NoFileOpenPage.xaml  NoFileOpenPage.xaml.cs  Package.appxmanifest  SettingsHolder.cs  TextViewPage.xaml  TextViewPage.xaml.cs  Utils.cs  app.manifest
FluentInfo/Data/: MediaInfoTextParser.cs  OrderedProperties.cs  Structures.cs
FluentInfo/Model/: SelectedView.cs
FluentInfo/Pages/: AboutContentPage.xaml  AboutContentPage.xaml.cs  FailedPage.xaml  FailedPage.xaml.cs  NoFileOpenPage.xaml  NoFileOpenPage.xaml.cs  PrettyViewPage.xaml  (+5 more)
FluentInfoCommon/: FluentInfoCommon.csproj  MediaInfoTextParser.cs  OrderedProperties.cs  Structures.cs  Utils.cs
FluentInfoShellExtension/: .gitignore  Cargo.toml  FluentInfoShellExtension.csproj  FluentInfoShellExtension.vcxproj  FluentInfoShellExtension.vcxproj.filters  dllmain.cpp  dllmain.def  pch.h
FluentInfoShellExtension/src/: lib.rs
FluentInfoTest/: FluentInfoTest.csproj  SectionParserTest.cs
MachineTranslate/: MachineTranslate.csproj  Program.cs
MediaInfo/: MediaInfo.cs  MediaInfoLib.csproj  source-arm64.txt  source-x64.txt  source-x86.txt
(+245 files in other folders)
