[package]
name = "fluent_info_shell_extension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
widestring = "1.1.0"
windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "implement",
]
